--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+		<meta name="theme-color" content="#2563eb" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-title" content="Ledger" />
 		<meta name="mobile-web-app-capable" content="yes" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="manifest" href="/manifest.webmanifest" />
+		<link rel="icon" href="/icons/icon-192.png" />
+		<link rel="apple-touch-icon" href="/icons/icon-180.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
